vlib/v/checker/tests/function_too_many_args_err.vv
fn test(b bool) {
}

fn main() {
    test(true, false, 1)
}
